2008-06-18  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/utils.c (xim_lookup_atom): deal with the X event in
	the queue before doing something.

	* backends/xim/server.c (xim_server_set_property): work around for
	a dalay until IM is ready. (rhbz#451753)

	* src/factory.c (imsettings_manager_real_what_im_is_running):
	Fix a typo. always saying IM is running if no .xinputrc.

2008-06-17  Akira TAGOH  <tagoh@redhat.com>

	* utils/imsettings-info.c (main): exit if can't get the session bus.

	* utils/imsettings-stop.c (main): likewise.

	* utils/imsettings-restart.c (main): likewise.

	* utils/imsettings-start.c (main): likewise.

	* utils/imsettings-list.c (main): likewise.

	* utils/imsettings-stop.c (main): Fix a typo in the help
	message. (rhbz#451739)

	* utils/imsettings-restart.c (main): likewise.

	* utils/imsettings-start.c (main): likewise.

	* backends/xim/main.c (main): do not unref the instance of
	IMSettingsInfo during referring the information in IMSettingsInfo
	because those is the constant variable.

2008-06-12  Akira TAGOH  <tagoh@redhat.com>

	* src/factory_info.c (imsettings_info_manager_real_changed_dot_xinputrc):
	do not remove the hash by IM name. (Issue#9)

2008-06-11  Akira TAGOH  <tagoh@redhat.com>

	* utils/imsettings-info.c (main): check the version of the service
	and reload as needed.

	* utils/imsettings-stop.c (main): likewise.

	* utils/imsettings-restart.c (main): likewise.

	* utils/imsettings-start.c (main): likewise.

	* utils/imsettings-list.c (main): likewise.

	* src/factory.c (imsettings_manager_real_get_version): new.

	* src/factory_info.c (imsettings_info_manager_real_get_version): new.

	* imsettings/imsettings-request.c (imsettings_request_get_version):
	new.

	* imsettings/imsettings-observer.c (imsettings_get_version): new.

	* imsettings/imsettings.xml: Add GetVersion method.

	* imsettings/imsettings-object.c (imsettings_object_dump):
	output the type name instead of GType directly. this wasn't a portable